Team activities add

--- a/_drafts/2020-05-05-draft.md
+++ b/_drafts/2020-05-05-draft.md
@@ -128,39 +128,53 @@ What is the team up to this week? Let’s check in!
 
 **Dan**
 
-[![Dan](../assets/20200mdd/20200mdddan.jpg)](https://circuitpython.org/)
+I released the BLE pulse oximeter library, now that the Learn Guide for that project is published.
 
+I've been going in circles a bit on some core changes for BLE PacketBuffer, to make sure it works with the new Adafruit services. I should be done with that soon.
 
+I've tried a BLE-capable body-weight scale and a blood pressure monitor. Unfortunately neither use the standard services defined by the Bluetooth organization, so there will be some reverse engineering.
 
 **Jeff**
 
-[![Jeff](../assets/20200mdd/20200mddjeff.jpg)](https://circuitpython.org/)
+[![Jeff](../assets/20200505/20200505jeff.jpg)](https://circuitpython.org/)
 
+For the past week, I've been working on adding RGBMatrix support to the Feather STM32F407.  This is the first time the initial work of porting to a new microcontroller has fallen to me instead of Phil B., and the first real work I've done on an STM microcontroller, so it has been a learning experience.
 
+For fun, I eagerly printed the new [slim enclosure for Adafruit CLUE](https://learn.adafruit.com/clue-slim-case) and used it for a little project with displayio:  A die roller for the FATE role playing system.  In FATE, you use 4 special dice (labeled +, - and blank) together with your character's inherent skill to determine an outcome.  It was a fun chance to learn a little more about how the accelerometer and proximity sensor work, because you can either shake the CLUE or touch the sensor above the screen to roll the dice.
 
 **Kattni**
 
-[![Kattni](../assets/20200mdd/20200mddkattni.jpg)](https://circuitpython.org/)
+This week, I've been going through all the open GitHub issues across all of the CircuitPython libraries. While there are many longstanding issues that need to remain open, there are many that can be addressed in some way. I've been pinging original authors to get status updates, closing completed issues, and putting in PRs to resolve some of the quick ones. Expect to see activity across many of the libraries over the next couple of weeks.
 
-
+As well, I added a new capability to the Circuit Playground library. You can now check which board you have connected, Express or Bluefruit. There are two options. First is the option to check which board is connected and return that piece of information. Second is the option to specify which board to look for and use that to execute code based on which board is connected, e.g. if a Circuit Playground Bluefruit is connected, run the following code. This came out of the sound meter example failing to work on Circuit Playground Bluefruit. There are some features that are not supported by Circuit Playground Express, so it allows for writing sound related code that works on both Express and Bluefruit.
 
 **Lucian**
 
-[![Lucian](../assets/20200mdd/20200mddlucian.jpg)](https://circuitpython.org/)
+This past week has mostly been carryover from the previous week, with new bugfixes and documentation changes. I've written a new ReadMe for the STM32 port, which should make it easier for newcomers to understand the port's structure and start getting builds loaded with the new `make flash` command. I've also been doing miscellaneous work on bugfixes, reviews, and a lot of reading about the i.MX RT. 
 
-
+In my personal time, I risked a drive into the plague-zones (Boston) to retrieve some gear for board testing and a new circuitpython project. While I was there I got to see the PPE manufacturing setup running at the Makerspace where I normally work full time, Artisan's Asylum. They're taking safety very seriously and still churning out seriously impressive quantities of equipment. It was great to see that everyone is safe and to hear updates from them - from an approved distance of 6ft, of course. 
 
 **Melissa**
 
-[![Melissa](../assets/20200mdd/20200mddmelissa.jpg)](https://circuitpython.org/)
+[![Melissa](../assets/20200505/20200505melissa.jpg)](https://circuitpython.org/)
 
+This past week I worked on adding the Rock Pi S to Blinka. This included adding some more tools such as a SysFS Pin wrapper so that there are more options to add new boards to Blinka. Additionally, I added Pulse Width Modulation support and Analog Input support to the Rock Pi S, which is the first time I had added those features.
 
+Next up, I will be focusing on improving I2C support of the Raspberry Pi including adding support for unusual configurations as well as working on adding I2C to the external bitbangio CircuitPython library.
 
 **Scott**
 
-[![Scott](../assets/20200mdd/20200mddscott.jpg)](https://circuitpython.org/)
+At the end of last week I worked more on the ESP32-S2 port. I got CircuitPython to the point of linking the files together and, with the help of folks from my stream, generating lots of linking errors (Previously we had many compiler errors). The end of this week, I'll continue working on the port by fixing the linker issues.
 
+The start of this week was spent on the lower_power PR. There was a weird USB issue on SAMD21 that only came up with certain USB host computers. I got it reproduced here and then Thach also reproduced it and then fixed it. So, it should be ready to merge. :fingers_crossed:
 
+I've also been helping Dylan convert the inline native module docs from RST to Python stubs. That way we'll be able to provide stubs to editors like VS Code that can use it to help with completions.
+
+dunkmann00 has also been working to get PixelBuf launched so that folks have faster NeoPixels. There are a few administrative things to do like releasing the libraries and then updating the frozen version but that shouldn't be too hard.
+
+Lastly, I chatted yesterday with Helen Leigh about CircuitPython for her upcoming Make magazine article. I look forward to reading it.
+
+Thanks to everyone who has helped me this week!
 
 ## Upcoming events!
 
