adding seeduino Xiao macro pad

--- a/_drafts/2020-05-05-draft.md
+++ b/_drafts/2020-05-05-draft.md
@@ -49,6 +49,10 @@ Adafruit has always been an open source hardware company, predating the [Open So
 
 Text
 
+![Macro Pad made from Seeduino](../assets/20200505/20200505macro_seeduino.jpg)
+
+An HID Macro pad made with [Seeeduino Xiao & CircuitPython](https://makeandymake.github.io/2020/05/02/seeeduino-xiao-circuitpython-usb-hid-macro-keypad.html)
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://link)? [title](url).
 
 ## Made with Mu
