--- a/_drafts/2020-05-12-draft.md
+++ b/_drafts/2020-05-12-draft.md
@@ -43,6 +43,18 @@ Adafruit has always been an open source hardware company, predating the [Open So
 
 * [Board-name](url)
 
+## Call for help -- Translating CircuitPython is now easier than ever!
+
+[![CircuitPython translation statistics on weblate](../assets/20200512/weblate-stats.jpg)](https://hosted.weblate.org/engage/circuitpython/)
+
+One important feature of CircuitPython is translated control and error messages.
+With the help of fellow open source project [Weblate](https://weblate.org/), we're making it even easier to add or improve translations.
+Sign in with an existing account such as Github, Google or Facebook and start contributing through a simple web interface.
+No forks or pull requests needed!
+As always, if you run into trouble join us on [Discord](https://adafru.it/discord), we're here to help.
+
+[![Hello world](../assets/DIR-LOCATION/DATE-helloworld.jpg)](https://github.com/adafruit/circuitpython/issues/1098)
+
 ## News from around the web!
 
 [![title](../assets/20200mdd/20200mdd-name.jpg)](https://circuitpython.org/)
@@ -197,14 +209,6 @@ CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpyt
 [#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
 
 [### Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
-
-## Call for help – CircuitPython messaging to other languages!
-
-[![Hello world](../assets/DIR-LOCATION/DATE-helloworld.jpg)](https://github.com/adafruit/circuitpython/issues/1098)
-
-We [recently posted on the Adafruit blog](https://blog.adafruit.com/2018/08/15/help-bring-circuitpython-messaging-to-other-languages-circuitpython/) about bringing CircuitPython messaging to other languages, one of the exciting features of CircuitPython 4 and later versions is translated control and error messages. Native language messages will help non-native English speakers understand what is happening in CircuitPython even though the Python keywords and APIs will still be in English. If you would like to help, [please post](https://github.com/adafruit/circuitpython/issues/1098) to the main issue on GitHub and join us on [Discord](https://adafru.it/discord).
-
-We made this graphic with translated text, we could use your help with that to make sure we got the text right, please check out the text in the image – if there is anything we did not get correct, please let us know. Dan sent me this [handy site too](http://helloworldcollection.de/#Human).
 
 ## jobs.adafruit.com - Find a dream job, find great candidates!
 
