CP Weekly vid, PyDev, version numbers

--- a/_drafts/2020-05-12-draft.md
+++ b/_drafts/2020-05-12-draft.md
@@ -156,6 +156,10 @@ Create a CircuitPython build environment for SPRESENSE on Windows 10 with Window
 
 An eye opening comparison of using .join() vs. "+" to join strings in Python - [Towards Data Science](https://towardsdatascience.com/do-not-use-to-join-strings-in-python-f89908307273).
 
+PyDev of the Week – Jan Giacomelli on [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/05/11/pydev-of-the-week-jan-giacomelli/)
+
+CircuitPython Weekly Meeting for May 11th, 2020 [on YouTube](https://youtu.be/k_a4vXGS6CM)
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/05/05/esp32-s2-hack-chat-circuitpython-5-3-0-and-more-python-adafruit-circuitpython-circuitpython-micropython-thepsf/)? [Springer just made 400+ textbooks free to download](https://twitter.com/MIT_CSAIL/status/1257323849131134976).
 
 ## Made with Mu
@@ -367,13 +371,13 @@ As for other events, with the COVID pandemic, most in-person events are postpone
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [5.3.0](https://github.com/adafruit/circuitpython/releases/latest). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2019####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20200508](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.12](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.8.2](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.9.0a6](https://www.python.org/download/pre-releases/).
 
 [1692 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
