--- a/_drafts/2020-05-19-draft.md
+++ b/_drafts/2020-05-19-draft.md
@@ -28,6 +28,20 @@ This week, Blinka now runs on 50+ Single Board Computers!
 
 See all the boards which run Blinka on [CircuitPython.org](https://circuitpython.org/blinka).
 
+## Python Developers Survey 2019 Results Released Yesterday
+
+[![Python Developers Survey 2019](../assets/20200519/20200519survey.jpg)](https://www.jetbrains.com/lp/python-developers-survey-2019/)
+
+In the fall of 2019, the Python Software Foundation and JetBrains together conducted the official third annual Python Developers Survey. Much like the previous surveys in 2017 and 2018, they set out to identify the latest trends and gather insight into what the world of Python development looks like in 2019. The insights from 24,000 Python developers from more than 150 different countries have helped get a picture of the Python community.
+
+Some interesting results:
+
+[![Python Developers Survey 2019](../assets/20200519/20200519stat1.jpg)](https://www.jetbrains.com/lp/python-developers-survey-2019/)
+
+[![Python Developers Survey 2019](../assets/20200519/20200519stat2.jpg)](https://www.jetbrains.com/lp/python-developers-survey-2019/)
+
+Full results - [JetBrains](https://www.jetbrains.com/lp/python-developers-survey-2019/).
+
 ## CircuitPython 5.4.0 Beta 0 Released
 
 [![CircuitPython 5.4.0 Beta 0](../assets/20200519/20200519beta.jpg)](https://github.com/adafruit/circuitpython/releases/tag/5.4.0-beta.0)
