--- a/_drafts/2020-05-19-draft.md
+++ b/_drafts/2020-05-19-draft.md
@@ -211,7 +211,17 @@ Track your time using an Octahedron on Linux using Python - [LeMaRiva Tech](http
 
 Why Mu? Mu tries to make it as easy as possible to get started with programming but aims to help you graduate to "real" development tools soon after. Everything in Mu is the "real thing" but presented in as simple and obvious way possible. It's like the toddling stage in learning to walk: you're finding your feet and once you're confident, you should move on and explore! Put simply, Mu aims to foster autonomy. Try out Mu today! - [codewith.mu](https://codewith.mu/)
 
-## Coming soon
+## Coming Soon
+
+**CircuitPython Pull Requests**
+
+ESP32-S2 support for CircuitPython has been completed and is currently undergoing community review prior to merging - [GitHub](https://github.com/adafruit/circuitpython/pull/2910).
+
+Adding bytearray.decode() for CPython compatibility - [GitHub](https://github.com/adafruit/circuitpython/pull/2896).
+
+The vectorio library is intended to speed up drawing of shapes - [GitHub](https://github.com/adafruit/circuitpython/pull/2888).
+
+Work continues on a modern SDcard IO library - [GitHub](https://github.com/adafruit/circuitpython/pull/2863).
 
 ## New Boards Supported by CircuitPython
 
