--- a/_drafts/2020-05-26-draft.md
+++ b/_drafts/2020-05-26-draft.md
@@ -180,6 +180,8 @@ MSS - an ultra fast cross-platform multiple screenshots module in pure Python us
 
 [![Python Humor](../assets/20200526/20200526humor.jpg)](https://twitter.com/lexfridman/status/1264540756120940550)
 
+PyDev of the Week: Cristi Vlad on [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/05/25/pydev-of-the-week-cristi-vlad/)
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/05/19/fifty-blinka-boards-python-survey-out-cp-5-4-0-beta-0-and-more-python-adafruit-circuitpython-circuitpython-micropython-thepsf/)? [Fifty Single Board Computers are now Blinka Compatible](https://circuitpython.org/blinka).
 
 ## Coming Soon - CircuitPython Pull Requests
@@ -332,15 +334,15 @@ As for other events, with the COVID pandemic, most in-person events are postpone
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [5.3.0](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [5.4.0-beta.0](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2019####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20200523](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.12](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.8.3](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.9.0b1](https://www.python.org/download/pre-releases/).
 
-[### Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
+[1,726 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
 ## jobs.adafruit.com - Find a dream job, find great candidates!
 
