New/updates guides/libs, etc.

--- a/_drafts/2020-05-26-draft.md
+++ b/_drafts/2020-05-26-draft.md
@@ -213,7 +213,15 @@ Looking for adding a new board to CircuitPython? It's highly encouraged! Adafrui
 
 [![Adafruit Learning System](../assets/20200526/20200526learn.jpg)](https://learn.adafruit.com/)
 
-[title](url) from [name](url)
+[BLE Vibration Bracelet](https://learn.adafruit.com/ble-vibration-bracelet) from [Noe and Pedro](https://learn.adafruit.com/users/pixil3d)
+
+[Yoga Pose Chime](https://learn.adafruit.com/yoga-pose-chime) from [John Park](https://learn.adafruit.com/users/johnpark)
+
+[Textable Sensor with FONA and CircuitPython](https://learn.adafruit.com/textable-sensor-with-fona-and-circuitpython) from [Brent Rubell](https://learn.adafruit.com/users/brubell)
+
+[PyGamer MP3 Player with CircuitPython](https://learn.adafruit.com/pygamer-mp3-player-with-circuitpython) from [Jeff Epler](https://learn.adafruit.com/users/jepler)
+
+[Daily Cheer Automaton](https://learn.adafruit.com/daily-cheer-automaton) from [Dano Wall](https://learn.adafruit.com/users/danowall)
 
 Guide Update: [Creating and sharing a CircuitPython library](https://learn.adafruit.com/creating-and-sharing-a-circuitpython-library/testing-with-github-actions) by [Dylan Herrada](https://learn.adafruit.com/users/dherrada)
 
@@ -221,7 +229,7 @@ Guide Update: [Creating and sharing a CircuitPython library](https://learn.adafr
 
 **You can use CircuitPython libraries on Raspberry Pi!** We're updating all of our CircuitPython guides to show how to wire up sensors to your Raspberry Pi, and load the necessary CircuitPython libraries to get going using them with Python. We'll be including the updates here so you can easily keep track of which sensors are ready to go. Check it out!
 
-[title](url)
+Keep an eye out here for more updated guides!
 
 ## CircuitPython Libraries!
 
@@ -235,25 +243,31 @@ If you'd like to contribute, CircuitPython libraries are a great place to start.
 
 You can check out this [list of all the CircuitPython libraries and drivers available](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/blob/master/circuitpython_library_list.md). 
 
-The current number of CircuitPython libraries is **###**!
-
-**New Libraries!**
-
-Here's this week's new CircuitPython libraries:
-
-* [library](url)
+The current number of CircuitPython libraries is **230**!
 
 **Updated Libraries!**
 
 Here's this week's updated CircuitPython libraries:
 
-* [library](url)
+ * [Adafruit_CircuitPython_BluefruitConnect](https://github.com/adafruit/Adafruit_CircuitPython_BluefruitConnect)
+ * [Adafruit_CircuitPython_RGB_Display](https://github.com/adafruit/Adafruit_CircuitPython_RGB_Display)
+ * [Adafruit_CircuitPython_framebuf](https://github.com/adafruit/Adafruit_CircuitPython_framebuf)
+ * [Adafruit_CircuitPython_DS1841](https://github.com/adafruit/Adafruit_CircuitPython_DS1841)
+ * [Adafruit_CircuitPython_PyBadger](https://github.com/adafruit/Adafruit_CircuitPython_PyBadger)
+ * [Adafruit_CircuitPython_AdafruitIO](https://github.com/adafruit/Adafruit_CircuitPython_AdafruitIO)
+ * [Adafruit_CircuitPython_GC_IOT_Core](https://github.com/adafruit/Adafruit_CircuitPython_GC_IOT_Core)
+ * [Adafruit_CircuitPython_MiniMQTT](https://github.com/adafruit/Adafruit_CircuitPython_MiniMQTT)
+ * [Adafruit_CircuitPython_TestRepo](https://github.com/adafruit/Adafruit_CircuitPython_TestRepo)
+ * [Adafruit_CircuitPython_BitbangIO](https://github.com/adafruit/Adafruit_CircuitPython_BitbangIO)
+ * [Adafruit_CircuitPython_AzureIoT](https://github.com/adafruit/Adafruit_CircuitPython_AzureIoT)
+ * [Adafruit_CircuitPython_MLX90393](https://github.com/adafruit/Adafruit_CircuitPython_MLX90393)
+ * [Adafruit_CircuitPython_LED_Animation](https://github.com/adafruit/Adafruit_CircuitPython_LED_Animation)
 
 **PyPI Download Stats!**
 
 We've written a special library called Adafruit Blinka that makes it possible to use CircuitPython Libraries on [Raspberry Pi and other compatible single-board computers](https://learn.adafruit.com/circuitpython-on-raspberrypi-linux/). Adafruit Blinka and all the CircuitPython libraries have been deployed to PyPI for super simple installation on Linux! Here are the top 10 CircuitPython libraries downloaded from PyPI in the last week, including the total downloads for those libraries:
 
-KATTNI TABLE HERE
+Keep an eye out here for updated download stats coming soon!
 
 ## What’s the team up to this week?
 
@@ -340,7 +354,7 @@ CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpyt
 
 [#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
 
-[### Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
+[1726 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
 ## jobs.adafruit.com - Find a dream job, find great candidates!
 
