--- a/_drafts/2020-06-02-draft.md
+++ b/_drafts/2020-06-02-draft.md
@@ -189,6 +189,10 @@ Installing the latest version of Python on Mac OS Catalina and overriding the ol
 
 Why Can’t Python Find My Modules? - [Real Python](https://realpython.com/lessons/why-cant-python-find-my-modules/).
 
+CircuitPython Weekly for June 1st, 2020 [on YouTube](https://youtu.be/P8kedKH02bg).
+
+PyDev of the Week: Seth Michael Larson on [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/06/01/pydev-of-the-week-seth-michael-larson/).
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/05/26/virtually-maker-faire-hackspace-magazine-and-more-python-adafruit-circuitpython-circuitpython-micropython-thepsf/)? [HackSpace Magazine Issue 31](https://hackspace.raspberrypi.org/issues/31).
 
 ## Made with Mu
@@ -351,13 +355,13 @@ As for other events, with the COVID pandemic, most in-person events are postpone
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [5.3.0](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [5.4.0-beta.0](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2019####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20200601](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.12](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.8.3](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.9.0b1](https://www.python.org/download/pre-releases/).
 
 [1729 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
