--- a/_drafts/2020-06-09-draft.md
+++ b/_drafts/2020-06-09-draft.md
@@ -44,7 +44,7 @@ You can see the latest video and past videos on the Adafruit YouTube channel und
 
 [![GameBoy CircuitPython](../assets/20200609/20200609gameboy.jpg)](https://twitter.com/adafruit/status/1119323846857904128)
 
-Scott is also author of the CircuitPython on GameBoy cartridge. Coming soon, but if you wish to see, the design is on [OSHpark](https://t.co/DLouTVgrwM?amp=1).
+Scott is also author of the CircuitPython on GameBoy cartridge. If you wish to see, the design is on [OSHpark](https://t.co/DLouTVgrwM?amp=1). (It isn't currently reliable enough to sell.)
 
 ## Adafruit Update
 
@@ -131,6 +131,10 @@ Glances - a cross platform, Python powered system monitoring tool that packs lot
 [![Linux interactive kernel map](../assets/20200609/20200609linux.jpg)](https://makelinux.github.io/kernel/map/)
 
 An interactive map of Linux kernel - [GitHub.io](https://makelinux.github.io/kernel/map/) via [Twitter](https://twitter.com/binitamshah/status/1269883131173240834).
+
+PyDev of the Week: Dong-hee Na on [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/06/08/pydev-of-the-week-dong-hee-na/)
+
+CircuitPython Weekly Meeting for June 8th, 2020 [on YouTube](https://youtu.be/k_vklLFGBog) and [on diode.zone](https://diode.zone/videos/watch/01ebebf0-4738-4031-b0b5-fc2cf7f2c469)
 
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/06/02/discord-20k-summer-of-making-python-3-9-and-more-python-adafruit-circuitpython-circuitpython-micropython-thepsf/)? [Summer of Making – Hack Club – GitHub is sponsoring $50k worth of hardware grants for Adafruit hardware!](https://blog.adafruit.com/2020/05/28/summer-of-making-hack-club-github-is-sponsoring-50k-worth-of-hardware-grants-for-adafruit-hardware-hackclub-githubeducation-sam_poder/)
 
@@ -282,13 +286,13 @@ As for other events, with the COVID pandemic, most in-person events are postpone
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [5.3.0](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [5.4.0-beta.0](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2019####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20200605](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.12](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.8.3](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.9.0b1](https://www.python.org/download/pre-releases/).
 
 [1,739 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
