--- a/_drafts/2020-06-16-draft.md
+++ b/_drafts/2020-06-16-draft.md
@@ -180,6 +180,10 @@ Web Scraping in Python: Tools, Techniques, and Legality. Kimberly Fessel discuss
 
 An introduction to Numpy and Pandas course in Jupyter notebooks format - [GitHub](https://github.com/guiwitz/NumpyPandas_course).
 
+CircuitPython Weekly for June 15th, 2020 [on YouTube](https://youtu.be/qmGP2nWgrcw).
+
+PyDev of the Week: Kyle Stanley on [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/06/15/pydev-of-the-week-kyle-stanley/).
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/06/09/the-python-on-microcontrollers-newsletter-a-sign-of-change-circuitpython-powered-protest-signs-python-adafruit-circuitpython-circuitpython-micropython-thepsf/)? [Learn it Faster: The Entire Python Language in a Single Image](https://fossbytes.com/learn-it-faster-the-entire-python-language-in-a-single-image/).
 
 ## New Boards Supported by CircuitPython
@@ -330,13 +334,13 @@ As for other events, with the COVID pandemic, most in-person events are postpone
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [5.3.0](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [5.4.0-beta.1](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2019####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20200613](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.12](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.8.3](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.9.0b3](https://www.python.org/download/pre-releases/).
 
 [1,746 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
