Add meeting links and version numbers

--- a/_drafts/2020-06-23-draft.md
+++ b/_drafts/2020-06-23-draft.md
@@ -148,6 +148,10 @@ Using Python list comprehensions - [Real Python](https://realpython.com/python-t
 
 Art by Cat Robbins for the University of Bath 'Visions of Science' competition. This work showcases an Adafruit Circuit Playground Express and the university logo - [Twitter](https://twitter.com/mfc_cat/status/1275029110071451649) and [Zealous](https://www.zealous.co/theedge/opportunity/Art-Prize-open-call-for-UK-artists-/submissions/catrobbins/Dual-Core/) (vote for this while there).
 
+CircuitPython Weekly meeting for June 22nd, 2020 [on YouTube](https://youtu.be/GHFFb-nMsTw) and [on diode.zone](https://diode.zone/videos/watch/ef774e33-63bf-4954-b619-53c69d691524)
+
+PyDev of the Week: Adrin Jalali on [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/06/22/pydev-of-the-week-adrin-jalali/)
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/06/16/the-python-on-microcontrollers-newsletter-circuitpython-5-4-0-beta-1-ble-on-desktops-and-more-python-adafruit-circuitpython-circuitpython-micropython-thepsf/)? [Trying out our NEW BLE CircuitPython library support for desktop](https://www.youtube.com/watch?v=uW1eNPrLBi8&feature=youtu.be).
 
 ## New Boards Supported by CircuitPython
@@ -311,13 +315,13 @@ As for other events, with the COVID pandemic, most in-person events are postpone
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [5.3.0](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [5.4.0-beta.1](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2019####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20200621](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.12](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.8.3](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.9.0b3](https://www.python.org/download/pre-releases/).
 
 [1,755 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
