New/updated guides/libs, stars etc.

--- a/_drafts/2020-06-30-draft.md
+++ b/_drafts/2020-06-30-draft.md
@@ -5,7 +5,7 @@ date: 2020-06-30 07:00:00 -0800
 categories: weekly
 ---
 
-- [ ] Kattni updates
+- [X] Kattni updates
 - [ ] change date
 - [ ] update title
 - [ ] Feature story
@@ -77,11 +77,13 @@ Looking for adding a new board to CircuitPython? It's highly encouraged! Adafrui
 
 [![title](../assets/20200630/20200630learn.jpg)](https://learn.adafruit.com/)
 
-[title](url) from [name](url)
+[LED Protest Sign](https://learn.adafruit.com/led-protest-sign) from [John Park](https://learn.adafruit.com/users/johnpark)
 
-## Updated Learn Guides!
+[Pathfinder Robot Companion](https://learn.adafruit.com/pathfinder) from [John Park](https://learn.adafruit.com/users/johnpark)
 
-[title](url) from [name](url)
+[Esenciales para CircuitPython](https://learn.adafruit.com/esenciales-para-circuitpython) from [Àlvaro Figueroa](https://learn.adafruit.com/users/fede2)
+
+[Adafruit 1.3" Color TFT Bonnet for Raspberry Pi](https://learn.adafruit.com/adafruit-1-3-color-tft-bonnet-for-raspberry-pi) from [Melissa LeBlanc-Williams and Kattni](https://learn.adafruit.com/users/MakerMelissa)
 
 ## CircuitPython Libraries!
 
@@ -95,19 +97,25 @@ If you'd like to contribute, CircuitPython libraries are a great place to start.
 
 You can check out this [list of all the Adafruit CircuitPython libraries and drivers available](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/blob/master/circuitpython_library_list.md). 
 
-The current number of CircuitPython libraries is **###**!
-
-**New Libraries!**
-
-Here's this week's new CircuitPython libraries:
-
-* [library](url)
+The current number of CircuitPython libraries is **260**!
 
 **Updated Libraries!**
 
 Here's this week's updated CircuitPython libraries:
 
-* [library](url)
+ * [Adafruit_CircuitPython_RFM9x](https://github.com/adafruit/Adafruit_CircuitPython_RFM9x)
+ * [Adafruit_CircuitPython_Debouncer](https://github.com/adafruit/Adafruit_CircuitPython_Debouncer)
+ * [Adafruit_CircuitPython_BLE_BerryMed_Pulse_Oximeter](https://github.com/adafruit/Adafruit_CircuitPython_BLE_BerryMed_Pulse_Oximeter)
+ * [Adafruit_CircuitPython_NTP](https://github.com/adafruit/Adafruit_CircuitPython_NTP)
+ * [Adafruit_CircuitPython_MiniMQTT](https://github.com/adafruit/Adafruit_CircuitPython_MiniMQTT)
+ * [Adafruit_CircuitPython_BMP280](https://github.com/adafruit/Adafruit_CircuitPython_BMP280)
+ * [Adafruit_CircuitPython_Pypixelbuf](https://github.com/adafruit/Adafruit_CircuitPython_Pypixelbuf)
+ * [Adafruit_CircuitPython_LED_Animation](https://github.com/adafruit/Adafruit_CircuitPython_LED_Animation)
+ * [Adafruit_CircuitPython_BluefruitConnect](https://github.com/adafruit/Adafruit_CircuitPython_BluefruitConnect)
+ * [Adafruit_CircuitPython_Display_Text](https://github.com/adafruit/Adafruit_CircuitPython_Display_Text)
+ * [Adafruit_CircuitPython_PyBadger](https://github.com/adafruit/Adafruit_CircuitPython_PyBadger)
+ * [Adafruit_CircuitPython_RGB_Display](https://github.com/adafruit/Adafruit_CircuitPython_RGB_Display)
+ * [Adafruit_CircuitPython_ImageLoad](https://github.com/adafruit/Adafruit_CircuitPython_ImageLoad)
 
 **PyPI Download Stats!**
 
@@ -213,7 +221,7 @@ CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpyt
 
 [#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
 
-[### Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
+[1759 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
 ## Call for help -- Translating CircuitPython is now easier than ever!
 
