--- a/_drafts/2020-06-30-draft.md
+++ b/_drafts/2020-06-30-draft.md
@@ -177,7 +177,7 @@ We originally added safe mode to allow recovery when a board starts up and immed
 
 After failing to make progress on SDIO support with my crude setup, I ordered a development kit from Microchip with a properly wired SD card slot and an existing demo of its use that I could build from source.
 
-This board, called SAM E54 Xplained Pro, is based on the SAM E54 microcontroller, which is very similar to the SAM D51 that is in so many of Adafruit's boards, but was not yet supported.  There is now an active pull request to support this board in CircuitPython and pave the way for other boards based on SAM E54, and I have also successfully used this board to read SD cards using SDIO, so work on that pull request has resumed.
+This board, called SAM E54 Xplained Pro, is based on the SAM E54 microcontroller, which is very similar to the SAM D51 that is in so many of Adafruit's boards, but was not yet supported. There is now support for this board in CircuitPython and this paves the way for other boards based on SAM E54, and I have also successfully used this board to read SD cards using SDIO from within CircuitPython, so work on that pull request has resumed.
 
 **Kattni**
 
